<resources>
    <string name="app_name">ScionTra</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="forgot">Forgot Password?</string>
    <string name="not_remembered"><u>Not Remembered Exactly !</u></string>
    <string name="remembered"><u> "Fill Exact Date !"</u></string>
    <string name="help">FAQ\'s</string>
    <string name="register"><u>New here? Sign Up</u></string>
    <string name="about"><u>About Us</u></string>
    <string name="cloud"><b>\u00A9 2017 HealthScion Technologies Pvt. Ltd.  \nAll Rights reserved.</b></string>
    <string name="blog"><u>Blog</u></string>
    <string name="facebook"><u>Facebook</u></string>
    <string name="twitter"><u>Twitter</u></string>
    <string name="youtube"><u>Youtube</u></string>
    <string name="name"><b>View reports and manage health records</b></string>
    <string name="app_id_old">608699132624495</string>
    <string name="app_id">318942061855338</string>

    <!--126834477650763-->
    <string name="file_vault">File Vault</string>
    <string name="labs_loc">Labs Near You</string>
    <string name="s3_access_key">AKIAIUG673POSGFZTX4A</string>
    <string name="s3_secret">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</string>
    <string name="s3_bucket">cc-clinic-fs</string>
    <string name="direction">\ue001</string>
    <string name="location">\ue000</string>
    <string name="cross">\ue003</string>
    <string name="check">\ue002</string>
    <string name="seating">\ue006</string>
    <string name="drinking">\ue005</string>
    <string name="telephone">\ue007</string>
    <string name="parking">\ue008</string>
    <string name="washroom">\ue009</string>
    <string name="close">\ue000</string>
    <string name="labs">FIND LABS NEAR YOU</string>
    <string name="info">\ue000</string>
    <string name="coupon">I will visit the lab myself with a coupon.</string>
    <string name="sample">Send a request to lab to pick up my sample.</string>
    <string name="coupon_heading"><u>This coupon has been sent to your inbox as well.</u></string>
    <string name="ratingtxt">The Patient Portal rating is an ever evolving highly intelligent system taking in over 30 quality parameters like the type of services offered to lab accreditations, making sure that you are able to make an informed decision and always have a hassle free experience.</string>
    <string name="Terms"><u>Terms and Conditions.</u></string>
    <string name="Apply">APPLY</string>
    <string name="rupee">\u20B9</string>
    <string name="description">Find labs, save money, store medical records.</string>
    <string name="credit">Accepts credit \n cards</string>
    <string name="ambulance">Ambulance \n Services</string>
    <string name="promo">"Availed ₹850 off \nVia 'Fit50'</string>
    <string name="package_amenities"> \u2022 Free sample collection\n\u2022 Quality Assurance\n\u2022 Online Test Reports</string>
    <string-array name="education_infolist">
        <item>High School</item>
        <item>College</item>
        <item>Post Grad</item>
    </string-array>
    <string name="file_extension_text"><![CDATA[File extension should be \u2022png, \u2022jpg, \u2022bmp, \u2022gif, \u2022pdf, \u2022doc, \u2022docx, \u2022xls, \u2022xlsx. File name and size should be less than 99 characters and 10 MB respectively.]]></string>
    <string name="donot_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">&#160;Sign Up</string>
    <string name="sign_in">&#160;Sign in</string>
    <string name="let_started_text">Let\'s get you started in few clicks.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="credit_text">Health (Reports) Icon by rekanice from the Noun Project.\nWeight scale (Vitals) Icon by Eucalyp from the Noun Project.\nFamily Icon by Rauan from the Noun Project.\nFolder (Repository) Icon by Setyo Ari Wibowo from the Noun Project.</string>
    <string name="title_activity_transparent">Transparent</string>
</resources>
