<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#FFFFFF"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:paddingBottom="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_update" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="use your registered email id/Facebook and jump right in!"
            android:textColor="@color/sign_in_use_your_gray_color"
            android:textSize="16dp" />


        <EditText
            android:id="@+id/etSubject"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sign_in_edit_text_height"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_edit_text_style"
            android:gravity="center"
            android:hint="Email"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/sign_in_edit_bg_hint" />


        <EditText
            android:id="@+id/etContact"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sign_in_edit_text_height"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_edit_text_style"
            android:ellipsize="start"
            android:gravity="center"
            android:hint="Password"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/sign_in_edit_bg_hint" />

        <TextView
            android:id="@+id/textview1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/forgot"
            android:layout_marginTop="3dp"
            android:textColor="@color/sign_in_blue_color"
            android:textSize="14dp" />


        <Button
            android:id="@+id/bSend"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sign_in_button_text_height"
            android:layout_marginTop="15dp"
            android:background="@drawable/sign_signup_button_design"
            android:text="Sign in"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="OR"
            android:textSize="15dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/sign_in_button_text_height"
            android:layout_marginTop="5dp"
            android:background="@drawable/sign_in_sign_up_fb_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/fb" />

            <Button
                android:id="@+id/authButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="Login with Facebook"
                android:textColor="@color/white"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donot_have_an_account"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/sign_up_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/sign_in_blue_color"
                android:textSize="14dp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>