<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_update" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="use your registered email id/Facebook and jump right in!"
                android:textColor="@color/sign_in_gray_color"
                android:textSize="16dp" />


            <EditText
                android:id="@+id/etSubject"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/login_edit_text_style"
                android:ellipsize="start"
                android:gravity="center"
                android:hint="Search text"
                android:inputType="text"
                android:textColorHint="@color/sign_in_edit_bg_hint" />


            <EditText
                android:id="@+id/etContact"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/login_edit_text_style"
                android:ellipsize="start"
                android:gravity="center"
                android:hint="Search text"
                android:inputType="text"
                android:textColorHint="@color/sign_in_edit_bg_hint" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="Remember me"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/textview1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/forgot"
                    android:textColor="@color/sign_in_blue_color"
                    android:textSize="14dp" />
            </RelativeLayout>

            <Button
                android:id="@+id/register"
                android:layout_width="230dp"
                android:layout_height="60dp"
                android:background="@drawable/sign_signup_button_design"
                android:text="SIGN Up"
                android:textColor="@color/white"
                android:visibility="gone" />


            <Button
                android:id="@+id/bSend"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sign_in_button_text_height"
                android:layout_marginTop="10dp"
                android:background="@drawable/sign_signup_button_design"
                android:text="Sign in"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="OR"
                android:textSize="15dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sign_in_button_text_height"
                android:background="@drawable/sign_in_sign_up_fb_bg"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/fb" />

                <Button
                    android:id="@+id/authButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="Login with Facebook"
                    android:textColor="@color/white"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/donot_have_an_account"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/sign_up_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@color/sign_in_blue_color"
                    android:textSize="14dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="50dp"
                    android:layout_weight="40"
                    android:background="#CCCCCC" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:text="OR"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginRight="50dp"
                    android:layout_weight="40"
                    android:background="#CCCCCC" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/FrameLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/authButton_change_id_to_use"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/facebook_button"
                    android:drawableLeft="@drawable/fb"
                    android:text="LOGIN WITH FACEBOOK"
                    android:textColor="@color/white" />

            </FrameLayout>

            <Button
                android:id="@+id/authButton_alias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/facebook_button"
                android:drawableLeft="@drawable/fb"
                android:text="LOGIN WITH FACEBOOK"
                android:visibility="gone" />

            <Button
                android:id="@+id/relLabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/orange_button"
                android:drawableLeft="@drawable/navii"
                android:text="@string/labs"
                android:visibility="gone" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_alignParentBottom="true"
            android:background="#5a5a5d"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/secret"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/cloud"
                android:textColor="@android:color/white"
                android:textSize="12dp" />
        </RelativeLayout>

    </RelativeLayout>
</ScrollView>