<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">

    <LinearLayout
        android:id="@+id/signup_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sign_in_sign_up_margin"
        android:layout_marginRight="@dimen/sign_in_sign_up_margin"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/sign_up_plus_iv"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:scaleType="fitCenter"
            android:src="@drawable/sign_up_plus" />

        <TextView
            android:id="@+id/sign_up_create_account_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="Create Account"
            android:textColor="@color/create_account_tv_color"
            android:textSize="33dp" />

        <TextView
            android:id="@+id/lets_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:text="@string/let_started_text"
            android:textColor="@color/sign_in_use_your_gray_color"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/sign_up_name_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sign_in_edit_text_height"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_edit_text_style"
            android:gravity="center"
            android:hint="Name"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/create_account_tv_color"
            android:textColorHint="@color/sign_in_edit_bg_hint" />


        <EditText
            android:id="@+id/sign_up_email_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sign_in_edit_text_height"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_edit_text_style"
            android:gravity="center"
            android:hint="Email"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/create_account_tv_color"
            android:textColorHint="@color/sign_in_edit_bg_hint" />


        <EditText
            android:id="@+id/sign_up_password_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sign_in_edit_text_height"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_edit_text_style"
            android:ellipsize="start"
            android:gravity="center"
            android:hint="Password"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/create_account_tv_color"
            android:textColorHint="@color/sign_in_edit_bg_hint" />

        <Button
            android:id="@+id/create_account_bt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sign_in_button_text_height"
            android:layout_marginTop="15dp"
            android:background="@drawable/sign_signup_button_design"
            android:text="Create account"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/sign_up_or_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="OR"
            android:textColor="@color/sign_in_use_your_gray_color"
            android:textSize="15dp" />


        <LinearLayout
            android:id="@+id/signup_fb_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sign_in_button_text_height"
            android:layout_marginTop="10dp"
            android:background="@drawable/sign_in_sign_up_fb_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="25dp"
                android:src="@drawable/fb" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:paddingLeft="5dp"
                android:text="Continue with Facebook"
                android:textColor="@color/white"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/already_have_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/sign_in_use_your_gray_color"
                android:text="@string/already_have_an_account"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/sign_in_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/sign_in_blue_color"
                android:textSize="14dp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>